--- a/app/src/main/res/layout/food_order_rvleft_layout.xml
+++ b/app/src/main/res/layout/food_order_rvleft_layout.xml
@@ -6,7 +6,6 @@
 
     <TextView
         android:id="@+id/food_name_left"
-        android:paddingLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:layout_height="wrap_content" />
@@ -14,11 +13,17 @@
     <TextView
         android:id="@+id/food_price_left"
         android:layout_width="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/food_number_left"
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/food_comment_left"
         android:layout_width="wrap_content"
         android:layout_weight="2"
         android:layout_height="wrap_content" />
@@ -27,7 +32,6 @@
         android:id="@+id/return_food"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:paddingRight="20dp"
         android:gravity="center"
         android:layout_weight="1"
         android:text="@string/food_return" />
