--- a/app/src/main/res/layout/food_order_rvright_layout.xml
+++ b/app/src/main/res/layout/food_order_rvright_layout.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/food_name_right"
-        android:paddingLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:layout_height="wrap_content" />
@@ -14,11 +15,17 @@
     <TextView
         android:id="@+id/food_price_right"
         android:layout_width="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/food_number_right"
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/food_comment_right"
         android:layout_width="wrap_content"
         android:layout_weight="2"
         android:layout_height="wrap_content" />
