--- a/app/src/main/res/layout/fragment_food_order_view.xml
+++ b/app/src/main/res/layout/fragment_food_order_view.xml
@@ -17,32 +17,48 @@
         android:id="@+id/bottom_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:background="@android:color/white"
         android:gravity="center_vertical"
         android:layout_alignParentBottom="true">
 
-        <TextView
-            android:id="@+id/order_number"
-            android:layout_width="wrap_content"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:visibility="gone"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/order_number"/>
+            style="?android:attr/progressBarStyleHorizontal"
+            android:max="100"/>
 
-        <TextView
-            android:id="@+id/order_price"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="@string/order_price"/>
+            android:orientation="horizontal"
+            android:background="@android:color/white"
+            android:gravity="center_vertical">
 
-        <Button
-            android:id="@+id/order_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:text="@string/order_submit"/>
+            <TextView
+                android:id="@+id/order_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/order_number"/>
+
+            <TextView
+                android:id="@+id/order_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="@string/order_price"/>
+
+            <Button
+                android:id="@+id/order_submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:text="@string/order_submit"/>
+        </LinearLayout>
 
     </LinearLayout>
 
