--- a/app/src/main/res/layout/food_rv_layout.xml
+++ b/app/src/main/res/layout/food_rv_layout.xml
@@ -7,14 +7,23 @@
     <TextView
         android:id="@+id/food_name"
         android:layout_width="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/food_price"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="2"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/food_number"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_weight="2"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
         android:layout_height="wrap_content" />
 
     <Button
